removed api key

--- a/crypto-text-classification/fine-tune.ipynb
+++ b/crypto-text-classification/fine-tune.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = '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'"
+    "openai.api_key = ''"
    ]
   },
   {
